--- a/elearning-webapp/src/index.css
+++ b/elearning-webapp/src/index.css
@@ -16,11 +16,13 @@
 }
 
 @layer base {
-  body {
+  html, body {
     -webkit-font-smoothing: antialiased;
     background-color: var(--color-background);
     color: #111827;
     font-family: var(--font-sans);
+    overflow-x: hidden;
+    max-width: 100vw;
   }
 }
 
